--- a/app/src/main/resources/loan-service-api.yaml
+++ b/app/src/main/resources/loan-service-api.yaml
@@ -132,6 +132,14 @@ paths:
           $ref: '#/components/responses/InternalServerError'
 
     post:
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: string
+            format: uuid
+
       description: 'Для клиента. Минимальная сумма равна 1. Дата конца должна быть больше даты начала'
       summary: 'Взятие кредита'
       tags:
@@ -175,7 +183,7 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
-  /v1/loans/{userId}:
+  /v1/loans/users/{userId}:
     parameters:
       - in: path
         name: userId
@@ -206,6 +214,12 @@ paths:
     parameters:
       - in: path
         name: loanId
+        required: true
+        schema:
+          type: string
+          format: uuid
+      - in: query
+        name: userId
         required: true
         schema:
           type: string
